[tool.poetry]
name = "network-protocols"
version = "0.1.0"
description = ""
authors = ["Mihail <infast1k@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
